--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "serversale",
-  "version": "0.0.5",
-  "description": "Sever for application sale product",
-  "main": "index.js",
+  "name": "koa-demo",
+  "version": "0.0.1",
+  "description": "A Demo Rest API written in Koa.js.",
+  "main": "app.js",
+  "author": "Alex Allen",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://git.heroku.com/murmuring-shore-83667.git"
-  },
-  "author": "khiemkino",
-  "license": "ISC",
   "dependencies": {
-    "hapi": "~16.6.2"
+    "bluebird": "^3.5.0",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-convert": "^1.2.0",
+    "koa-handle-error": "^0.0.5",
+    "koa-json-error": "^3.1.2",
+    "koa-logger": "^3.0.0",
+    "koa-res": "^1.3.0",
+    "koa-simple-router": "^0.2.0",
+    "mongoose": "^4.10.3"
   }
 }
