--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Alex Allen",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
